# fowl

./: Cargo.toml  LICENSE  README.md  build.rs  install.sh  uninstall.sh
src/: download.rs  extract.rs  main.rs
