[package]
name = "fowl"
version = "0.1.0"
edition = "2021"
description = "Terminal download accelerator — embeds aria2c for zero-dependency installs"
license = "MIT"

[[bin]]
name = "fowl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
rand = "0.8"
anyhow = "1"
ctrlc = "3"

[build-dependencies]
zip = "2"
ureq = "2"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
